--- a/style.css
+++ b/style.css
@@ -144,3 +144,19 @@ footer {
     opacity: 0.2;
   }
 }
+
+
+.flex-container{
+display: flex;
+flex-direction: row;
+border: 1px solid #9e9a9a;
+padding : 20px;
+}
+
+
+.flex-container2 {
+  display: flex;
+flex-direction: row;
+border: 1px solid #9e9a9a;
+padding : 20px;
+}
