--- a/style.css
+++ b/style.css
@@ -20,14 +20,129 @@
 }
 
 header {
-  height: 156px;
-  background-color: green;
+  position: relative;
+}
+#logo {
+  width: 130px;
+  max-height: 35px;
+}
+#signIn {
+  width: 176px;
+  transform: translateY(-50%);
+}
+#signIn img {
+  padding: 2px 10px;
+  float: left;
+}
+header nav {
+  height: 64px;
+  width: 100%;
+  margin: 8px 0 -8px 0;
+}
+/* pour afficher le menu avec les marges sur un grand écran */
+@media screen and (min-width: 1280px) {
+  header nav {
+    padding: 5px 16%;
+  }
+}
+/* Menu de navigation */
+header ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  text-align: center;
+  position: absolute;
+}
+header li {
+  float: left;
+  margin: auto;
+  padding: 0;
+}
+header li a {
+  display: inline-block;
+  min-width: 60px;
+  text-decoration: none;
+  padding: 2px 5px 0 0;
+  color: #000;
+  font-family: "BBC Reith Sans";
+  font-size: 12px;
+  font-weight: bold;
+}
+.mainMenu {
+  transform: translateY(50%);
+}
+header ul li ul {
+  display: none;
+}
+header ul li:hover ul {
+  display: block;
+}
+header li:hover ul li {
+  float: left;
+  background: #fff;
+}
+/* sous menu */
+.submenu {
+  display: none;
+}
+header nav li:hover .submenu {
+  display: block;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  padding: 0;
+  z-index: 1000;
+}
+.submenu li a {
+  padding: px 5px;
+  width: 100px;
 }
 
-footer {
-  height: 156px;
-  background-color: pink;
+header #logo {
+  height: 60px;
 }
+header #signIn {
+  height: 30px;
+}
+/* menu news */
+#news {
+  background: #b80000;
+  color: white;
+  padding: 0 16%;
+  display: inline-block;
+  width: 100%;
+  height: 86px;
+}
+#news h2 {
+  height: 56px;
+  font-size: 40px;
+  margin-top: -4px;
+  letter-spacing: 2px;
+  font-weight: bold;
+}
+.menuNews {
+  height: 36px;
+  margin-top: -24px;
+}
+.menuNews a {
+  color: #fff;
+  font-size: 14px;
+  margin: 0;
+  padding: 0 5px;
+  font-family: "BBC Reith Sans";
+}
+.menuNews a:hover {
+  border-bottom: 4px solid #fff;
+}
+.tiniBorder {
+  border-left: 0.1em solid #fff;
+  border-right: 0.1em solid #fff;
+}
+
+/* header {
+  height: 156px;
+  background-color: green;
+} */
 
 .main-container {
   padding: 1rem;
@@ -40,6 +155,32 @@ footer {
 
 .primary-story {
   background-color: blueviolet;
+  max-width: 70%;
+  height: 100%;
+  display: flex;
+}
+
+.primary-story-main-text {
+  display: flex;
+  font-size: 1.8rem;
+  width: 260px;
+  height: 170px;
+}
+
+.live-title-container {
+  font-family: Arial, Helvetica, sans-serif, Courier, monospace;
+  background-color: #ffff;
+  /* width: 120px; */
+  height: 30px;
+}
+
+.live-title {
+  vertical-align: middle;
+  margin-left: 10px;
+  font-weight: 700;
+  color: #ba1818;
+  font-size: 2rem;
+  margin-right: 10px;
 }
 
 .card {
@@ -111,22 +252,23 @@ footer {
   width: 13px;
   height: 13px;
 }
-.extern-circle {
+
+.circle {
+  height: 30px;
+  aspect-ratio: 1;
   position: relative;
-  width: 100px;
-  height: 100px;
   border-radius: 50%;
-  border: 5px solid #ba1818;
-  z-index: 0;
+  border: 4px solid #ba1818;
 }
 
-.intern-circle {
+.circle::after {
   position: absolute;
+  content: "";
   top: 50%;
   right: 50%;
   transform: translate(50%, -50%);
-  width: 75px;
-  height: 75px;
+  aspect-ratio: 1;
+  height: 15px;
   background-color: #ba1818;
   z-index: 10000;
   border-radius: 50%;
@@ -138,9 +280,130 @@ footer {
     opacity: 1;
   }
   25% {
-    opacity: 0.5;
+    opacity: 0.3;
   }
-  50% {
-    opacity: 0.2;
+  100% {
+    opacity: 1;
   }
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  border: 1px solid #9e9a9a;
+  padding: 20px;
+}
+
+.flex-container2 {
+  display: flex;
+  flex-direction: row;
+  border: 1px solid #9e9a9a;
+  padding: 20px;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  background-color: rgb(57, 56, 56);
+  color: aliceblue;
+  font-family: "BBC Reith Sans";
+}
+
+.siteMap {
+  width: 100%;
+}
+.navigation {
+  font-family: "BBC Reith Sans";
+  float: left;
+  width: 100%;
+  padding: 0 16px 0 16px;
+}
+
+.commercial-legacy {
+  border-bottom: 1px solid #949494;
+  width: 100%;
+  font-size: 0.8rem;
+}
+
+.commercial-legacy ul {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  list-style: none;
+  padding-left: 0;
+  margin-left: -19px;
+}
+
+.commercial-legacy ul li {
+  line-height: 1.2rem;
+  border-right: 1px solid #949494;
+}
+
+.commercial-legacy ul li a {
+  display: block;
+  padding-top: 1em;
+  padding-right: 19px;
+  margin-left: 19px;
+  color: aliceblue;
+  text-decoration: none;
+  width: 100%;
+}
+
+.commercial-legacy ul li a span {
+  font-weight: bold;
+}
+
+.commercial-legacy ul li a:hover {
+  text-decoration: underline;
+}
+
+.content-info {
+  width: 100%;
+  font-size: 0.7rem;
+}
+
+.policies ul {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  float: left;
+  padding-left: 0;
+}
+
+.policies ul li {
+  margin-bottom: 1.23em;
+  margin-left: 19px;
+}
+
+.policies ul li a {
+  color: aliceblue;
+  text-decoration: none;
+}
+
+.policies ul li a:hover {
+  text-decoration: underline;
+}
+
+.copyright {
+  display: flex;
+  flex-direction: row;
+  float: left;
+  margin-left: 19px;
+}
+.copyright label {
+  margin-right: 5px;
+}
+
+.copyright span a {
+  color: aliceblue;
+  font-weight: 700;
+  text-decoration: none;
+}
+
+.copyright span a:hover {
+  text-decoration: underline;
+}
+
+.copyright em {
+  font-weight: 700;
 }
