--- a/style.css
+++ b/style.css
@@ -68,6 +68,8 @@ header {
 .nav-item {
   color: #fff;
   width: fit-content;
+  height: fit-content;
+  vertical-align: middle;
   margin: 0;
   padding: 0 12px;
   position: relative;
@@ -84,7 +86,10 @@ header {
   height: 4px;
   background-color: #fff;
 }
-
+.nav-item-first {
+  padding-left: 5px;
+  padding-right: 12px;
+}
 .nav-item-end {
   border-right: 0px solid rgba(0, 0, 0, 0.15);
 }
@@ -158,13 +163,6 @@ header {
   background-color: #b80000;
 }
 
-.nav-container {
-  display: flex;
-}
-
-.nav-item {
-  font-size: 1rem;
-}
 /* #logo {
   width: 130px;
   max-height: 35px;
