--- a/style.css
+++ b/style.css
@@ -219,6 +219,7 @@ header li {
   column-gap: 20px; */
   margin-bottom: 25px;
   /* background-color: red; */
+  width: 100%;
 }
 
 .second-part {
@@ -245,7 +246,7 @@ header li {
   /* gap: 15px; */
 }
 .grid-ad {
-  height: 250px;
+  height: 280px;
 }
 
 .features-container {
@@ -283,8 +284,8 @@ header li {
   height: fit-content;
 }
 .card-image {
-  max-width: 100%;
-  /* height: 135px; */
+  /* max-width: 100%; */
+  height: 135px;
 }
 
 .card-title-big {
@@ -329,9 +330,11 @@ header li {
   list-style: none;
   display: inline;
   vertical-align: middle;
+  min-width: max-content;
 }
 
 .card-footer li:first-of-type {
+  min-width: max-content;
   color: #5a5a5a;
   font-size: 0.875rem;
   font-weight: 500;
@@ -349,6 +352,7 @@ header li {
   margin-top: 4px;
   vertical-align: middle;
   display: flex;
+  /* background-color: red; */
 }
 
 .card-footer svg {
@@ -969,14 +973,14 @@ h3 {
 }
 
 .features-first {
-  width: 37%;
+  max-width: 70%;
   /* padding-left: 16px; */
   /* background-color: blueviolet; */
 }
 
 .features-first img {
   /* width: 100%; */
-  height: 270px;
+  height: 200px;
   /* padding-right: 10px; */
 }
 
@@ -1102,13 +1106,6 @@ h3 {
 .social-media-news {
   max-width: 50%;
 }
-.social-media-container {
-  /* background-color: blue; */
-}
-
-.why-bbc {
-  /* background-color: green; */
-}
 
 footer h2 {
   color: #ffffff;
@@ -1129,4 +1126,42 @@ footer a {
 
 footer label {
   margin-top: 0.8rem;
+}
+
+.card-text-section-first {
+  /* background-color: green; */
+  width: 180px;
+}
+
+.image-container-first {
+  /* background-color: #1da1f2; */
+  max-width: 200px;
+}
+
+.card-title-big-first {
+  margin-top: 0;
+}
+
+.most-watched a {
+  /* background-color: red; */
+  vertical-align: middle;
+}
+
+.no-align {
+  /* background-color: red; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.around-bbc-first {
+  padding-left: 0;
+}
+
+.sport-first {
+  padding-left: 0;
+}
+
+.in-news-first {
+  /* background-color: blue; */
 }
